@@ -3773,16 +3773,63 @@ name|ReservationQueue
 operator|)
 condition|)
 block|{
-if|if
-condition|(
-operator|!
-name|newQueues
-operator|.
-name|containsKey
-argument_list|(
+name|String
+name|queueName
+init|=
 name|e
 operator|.
 name|getKey
+argument_list|()
+decl_stmt|;
+name|CSQueue
+name|oldQueue
+init|=
+name|e
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+name|CSQueue
+name|newQueue
+init|=
+name|newQueues
+operator|.
+name|get
+argument_list|(
+name|queueName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|newQueue
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+name|queueName
+operator|+
+literal|" cannot be found during refresh!"
+argument_list|)
+throw|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|oldQueue
+operator|.
+name|getQueuePath
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|newQueue
+operator|.
+name|getQueuePath
 argument_list|()
 argument_list|)
 condition|)
@@ -3791,12 +3838,23 @@ throw|throw
 operator|new
 name|IOException
 argument_list|(
-name|e
+name|queueName
+operator|+
+literal|" is moved from:"
+operator|+
+name|oldQueue
 operator|.
-name|getKey
+name|getQueuePath
 argument_list|()
 operator|+
-literal|" cannot be found during refresh!"
+literal|" to:"
+operator|+
+name|newQueue
+operator|.
+name|getQueuePath
+argument_list|()
+operator|+
+literal|" after refresh, which is not allowed."
 argument_list|)
 throw|;
 block|}
