@@ -5573,6 +5573,240 @@ name|capacityScheduler
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+argument_list|(
+name|expected
+operator|=
+name|IOException
+operator|.
+name|class
+argument_list|)
+DECL|method|testQueueParsingWithMoveQueue ()
+specifier|public
+name|void
+name|testQueueParsingWithMoveQueue
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|YarnConfiguration
+name|conf
+init|=
+operator|new
+name|YarnConfiguration
+argument_list|()
+decl_stmt|;
+name|CapacitySchedulerConfiguration
+name|csConf
+init|=
+operator|new
+name|CapacitySchedulerConfiguration
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|csConf
+operator|.
+name|setQueues
+argument_list|(
+literal|"root"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"a"
+block|}
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setQueues
+argument_list|(
+literal|"root.a"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"x"
+block|,
+literal|"y"
+block|}
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setCapacity
+argument_list|(
+literal|"root.a"
+argument_list|,
+literal|100
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setCapacity
+argument_list|(
+literal|"root.a.x"
+argument_list|,
+literal|50
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setCapacity
+argument_list|(
+literal|"root.a.y"
+argument_list|,
+literal|50
+argument_list|)
+expr_stmt|;
+name|CapacityScheduler
+name|capacityScheduler
+init|=
+operator|new
+name|CapacityScheduler
+argument_list|()
+decl_stmt|;
+name|RMContextImpl
+name|rmContext
+init|=
+operator|new
+name|RMContextImpl
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|RMContainerTokenSecretManager
+argument_list|(
+name|csConf
+argument_list|)
+argument_list|,
+operator|new
+name|NMTokenSecretManagerInRM
+argument_list|(
+name|csConf
+argument_list|)
+argument_list|,
+operator|new
+name|ClientToAMTokenSecretManagerInRM
+argument_list|()
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|rmContext
+operator|.
+name|setNodeLabelManager
+argument_list|(
+name|nodeLabelManager
+argument_list|)
+expr_stmt|;
+name|capacityScheduler
+operator|.
+name|setConf
+argument_list|(
+name|csConf
+argument_list|)
+expr_stmt|;
+name|capacityScheduler
+operator|.
+name|setRMContext
+argument_list|(
+name|rmContext
+argument_list|)
+expr_stmt|;
+name|capacityScheduler
+operator|.
+name|init
+argument_list|(
+name|csConf
+argument_list|)
+expr_stmt|;
+name|capacityScheduler
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|csConf
+operator|.
+name|setQueues
+argument_list|(
+literal|"root"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"a"
+block|,
+literal|"x"
+block|}
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setQueues
+argument_list|(
+literal|"root.a"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"y"
+block|}
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setCapacity
+argument_list|(
+literal|"root.x"
+argument_list|,
+literal|50
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setCapacity
+argument_list|(
+literal|"root.a"
+argument_list|,
+literal|50
+argument_list|)
+expr_stmt|;
+name|csConf
+operator|.
+name|setCapacity
+argument_list|(
+literal|"root.a.y"
+argument_list|,
+literal|100
+argument_list|)
+expr_stmt|;
+name|capacityScheduler
+operator|.
+name|reinitialize
+argument_list|(
+name|csConf
+argument_list|,
+name|rmContext
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
